# speech-text-speech

./: .env.example  .gitignore  AGENTS.md  PHASE2_README.md  PROJECT_PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_transcription_models.py  002_add_tts_models.py
backend/app/: config.py  main.py
backend/app/routers/: stt.py  tts.py
backend/app/services/: stt_service.py  tts_service.py
backend/app/services/adapters/: base.py  ollama_tts_adapter.py  openai_adapter.py  openai_tts_adapter.py
backend/app/utils/: document_processing.py  file_handling.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/STT/: FileUploader.tsx  LiveRecorder.tsx  TranscriptionDisplay.tsx
frontend/src/components/TTS/: DocumentUploader.tsx  TextInput.tsx
frontend/src/services/: api.ts
nginx/: Dockerfile  nginx.conf
scripts/: generate-s3-config.sh  setup.sh
