[project]
name = "stt-tts-backend"
version = "0.1.0"
description = "Speech-to-Text & Text-to-Speech Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "aiohttp==3.9.1",
    "httpx==0.26.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pydub==0.25.1",
    "soundfile==0.12.1",
    "python-docx==1.1.0",
    "PyPDF2==3.0.1",
    "openai==1.10.0",
    "google-cloud-speech==2.24.0",
    "google-cloud-texttospeech==2.16.3",
    "azure-cognitiveservices-speech==1.34.1",
    "elevenlabs==0.2.27",
    "boto3==1.34.34",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
]
